// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component Should render 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      Object {
        "alignSelf": undefined,
        "backgroundColor": undefined,
        "height": undefined,
        "justifyContent": undefined,
      },
      undefined,
    ]
  }
/>
`;

exports[`Column component Should render with childs 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      Object {
        "alignSelf": undefined,
        "backgroundColor": undefined,
        "height": undefined,
        "justifyContent": undefined,
      },
      undefined,
    ]
  }
>
  <View />
  <View />
  <View />
  <View />
</View>
`;

exports[`Column component Should render with style 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      Object {
        "alignSelf": "center",
        "backgroundColor": "blue",
        "height": undefined,
        "justifyContent": undefined,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
